tests/ui/shader/direct_call.stderr
error[RX3001]: cannot call a `kernel` function from a host context
 --> $DIR/shader/direct_call.rx:5:5
  |
5 |     vs_main(); //~ ERROR RX3001
  |     ^^^^^^^^^ cannot be called from a host context
