tests/ui/shader/direct_call.rx
//@ spec: RXS-0153
vertex fn vs_main() {}

fn main() {
    vs_main(); //~ ERROR RX3001
}
